引入ent，实现对单表crud
