# ent/migrate/schema.go
@@ -1,0 +1,33 @@
+// Code generated by ent, DO NOT EDIT.
+
+package migrate
+
+import (
+	"entgo.io/ent/dialect/sql/schema"
+	"entgo.io/ent/schema/field"
+)
+
+var (
+	// UsersColumns holds the columns for the "users" table.
+	UsersColumns = []*schema.Column{
+		{Name: "id", Type: field.TypeInt64, Increment: true},
+		{Name: "name", Type: field.TypeString, Size: 50},
+		{Name: "email", Type: field.TypeString, Unique: true, Size: 100},
+		{Name: "password", Type: field.TypeString},
+		{Name: "create_time", Type: field.TypeTime, Default: "CURRENT_TIMESTAMP"},
+		{Name: "update_time", Type: field.TypeTime, Default: "CURRENT_TIMESTAMP"},
+	}
+	// UsersTable holds the schema information for the "users" table.
+	UsersTable = &schema.Table{
+		Name:       "users",
+		Columns:    UsersColumns,
+		PrimaryKey: []*schema.Column{UsersColumns[0]},
+	}
+	// Tables holds all the tables in the schema.
+	Tables = []*schema.Table{
+		UsersTable,
+	}
+)
+
+func init() {
+}
